--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,11 @@
       // Google Token : ID_TOKEN
       const body = { id_token: response.credential };
 
-      fetch( 'http://localhost:8080/api/auth/google', {
+      const url = (window.location.hostname.includes('localhost') )
+        ? 'http://localhost:8080/api/auth/google'
+        : 'https://restserver-node-jfdelaluz.herokuapp.com/api/auth/google';
+
+      fetch( url, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
